--- a/server/droidstar-demo-server.cabal
+++ b/server/droidstar-demo-server.cabal
@@ -27,5 +27,6 @@ executable droidstar-demo-server
                      , optparse-applicative
                      , foldl
                      , parsec
+                     , dns
   hs-source-dirs:      src
   default-language:    Haskell2010
