Make server hostname for client dynamic

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /client/elm-stuff/*
 /server/dist/*
+/docker-client/index.html
+/docker-server/_server
+/docker-server/_droidstar-debug.apk
+/client/index.html
+/droidstar
