--- a/server/droidstar-demo-server.cabal
+++ b/server/droidstar-demo-server.cabal
@@ -29,5 +29,7 @@ executable droidstar-demo-server
                      , parsec
                      , dns
                      , process
+                     , SHA
+                     , bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
