--- a/docker-client/Dockerfile
+++ b/docker-client/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx
 
-COPY ./html/* /usr/share/nginx/html/
+COPY ./html/css /usr/share/nginx/html/css
+COPY ./html/index.html /usr/share/nginx/html/index.html
