Work on new server dockerfile

--- a/docker-server/Dockerfile
+++ b/docker-server/Dockerfile
@@ -1,27 +1,24 @@
-FROM greyfoxit/alpine-android
+FROM nixos/nix
 
-RUN apk update
-RUN echo "https://s3-us-west-2.amazonaws.com/alpine-ghc/8.0" >> /etc/apk/repositories
-ADD https://raw.githubusercontent.com/mitchty/alpine-ghc/master/mitch.tishmack%40gmail.com-55881c97.rsa.pub \
-    /etc/apk/keys/mitch.tishmack@gmail.com-55881c97.rsa.pub
-RUN apk update
-RUN apk add alpine-sdk git ca-certificates gmp-dev zlib-dev linux-headers musl-dev
-RUN apk add ghc cabal
-RUN cabal update
-RUN cabal install text wai wai-websockets warp websockets http-types safe containers mtl turtle aeson optparse-applicative foldl parsec
-RUN cabal install dns
-RUN cabal install process
-RUN cabal install SHA bytestring
+WORKDIR /root
 
-# See https://github.com/docker-library/openjdk/issues/73
-RUN apk add ttf-dejavu
+RUN nix-channel --add https://nixos.org/channels/nixos-18.03 nixpkgs
+RUN nix-channel --update
 
-RUN apk add graphviz
+RUN nix-env -iA nixpkgs.graphviz
+RUN nix-env -iA nixpkgs.cabal2nix
+RUN nix-env -iA nixpkgs.androidsdk
+RUN nix-env -iA nixpkgs.git
 
-COPY ./_server /root/server
-COPY ./_apks /root/apks
+COPY ./_server ./server
+COPY ./exprs.nix ./exprs.nix
 
-RUN cd /root/server && cabal configure && cabal build
-RUN cp /root/server/dist/build/droidstar-demo-server/droidstar-demo-server /bin/droidstar-demo-server
+RUN cabal2nix server > server.nix
 
-CMD ["/bin/droidstar-demo-server"]
+RUN nix-env -f exprs.nix -iA sbt-android
+RUN nix-env -f exprs.nix -iA droidstar-demo-server
+
+RUN git clone https://github.com/cuplv/droidstar
+RUN cd droidstar && git checkout demo-config && sbt driverApp/android:package
+
+CMD ["droidstar-demo-server"]
