Add optional custom-compile mode

--- a/docker-client/Dockerfile
+++ b/docker-client/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 
-COPY ./html/css /usr/share/nginx/html/css
-COPY ./html/index.html /usr/share/nginx/html/index.html
+COPY ./_html/css /usr/share/nginx/html/css
+COPY ./_html/index.html /usr/share/nginx/html/index.html
