--- a/server/droidstar-demo-server.cabal
+++ b/server/droidstar-demo-server.cabal
@@ -31,5 +31,6 @@ executable droidstar-demo-server
                      , process
                      , SHA
                      , bytestring
+                     , stm
   hs-source-dirs:      src
   default-language:    Haskell2010
